--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "remark-code-blocks",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "description": "A remark extention to support tabbed syntax in pymarkdown.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "check": "tsc --noEmit",
+    "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "remark",
+    "tabbed"
+  ],
+  "author": "Shaoyu Wang",
   "license": "ISC",
   "dependencies": {
+    "mdast-util-from-markdown": "^1.0.2",
+    "mdast-util-to-markdown": "^1.0.0",
     "typescript": "^5.2.2"
   }
 }
