--- a/package.json
+++ b/package.json
@@ -12,9 +12,39 @@
   ],
   "author": "Shaoyu Wang",
   "license": "ISC",
+  "devDependencies": {
+    "ava": "^5.3.1",
+    "bumpp": "^6.0.6",
+    "child_process": "^1.0.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "fs-extra": "^10.0.0",
+    "micromark": "^3.0.5",
+    "prettier": "^2.3.2",
+    "rehype-stringify": "^9.0.2",
+    "remark": "^14.0.1",
+    "remark-cli": "^10.0.0",
+    "remark-parse": "^10.0.0",
+    "remark-rehype": "^9.1.0",
+    "remark-stringify": "^10.0.2",
+    "to-vfile": "^7.2.1",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.4.2",
+    "unified-printer": "^1.1.3",
+    "vfile": "^5.0.2",
+    "zx": "^2.0.0"
+  },
   "dependencies": {
+    "hast": "^1.0.0",
+    "hastscript": "^7.0.2",
     "mdast-util-from-markdown": "^1.0.2",
     "mdast-util-to-markdown": "^1.0.0",
-    "typescript": "^5.2.2"
+    "micromark-factory-space": "^1.0.0",
+    "micromark-util-character": "^1.1.0",
+    "micromark-util-symbol": "^1.0.0",
+    "micromark-util-types": "1.0.1",
+    "unified": "^10.1.0",
+    "unist-util-visit": "^4.1.0"
   }
 }
