--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,12 @@
         // "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
         /* Language and Environment */
-        "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+        "target": "es2015",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 
         /* Modules */
-        "module": "commonjs",                                /* Specify what module code is generated. */
+        "module": "es2015",                                /* Specify what module code is generated. */
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
-        // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
+        "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
         // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
         // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
